--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,14 @@
       </div>
     </header>
     <main class="page-body__page-main  page-main">
-      <div class="page-body__container">
-          <section class="trip-events">
-            <h2 class="visually-hidden">Trip events</h2>
+      <div class="page-body__container page-main__container">
+<!--          <section class="trip-events">-->
+<!--            <h2 class="visually-hidden">Trip events</h2>-->
 
-            <!-- Сортировка -->
+<!--            &lt;!&ndash; Сортировка &ndash;&gt;-->
 
-            <!-- Контент -->
-          </section>
+<!--            &lt;!&ndash; Контент &ndash;&gt;-->
+<!--          </section>-->
       </div>
     </main>
 
